Fix session and shift behavior
Ending a session logged out users in the backend but did not clear
the frontend users list. Fixed that and also made starting a session
automatically log in the user that initiated it. That makes sense to
me anyway.

--- a/src/ui/components/styles/SaleWindow.module.css
+++ b/src/ui/components/styles/SaleWindow.module.css
@@ -15,7 +15,6 @@
 
 .info {
     width: 100%;
-    border: 1px solid red;
     align-content: center;
     font-size: 2.5rem;
 }
